--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://datacatessen.github.io/"
+baseURL = "https://datacatessen.github.io/"
 languageCode = "en-us"
 title = "Datacatessen"
 theme = "timer-hugo"
