remove recent posts from homepage

--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ logo = "avatar.png"
   useAvatar = true
   microBlogSection = "posts"
   displayMicroBlog = false
-  displayRecent = true
+  displayRecent = false
   displayHomeContent = true
   recentMax = 4
   mail = "info@datacatessen.com"
